Fix hanging collapse animation

--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -127,7 +127,7 @@ img.kroger-thumbnail {
   bottom:15px;
 }
 li.add-meal-from-week {
-  padding:0 1px 1px 1px;
+  padding:0 0 0 0;
   opacity:.8;
 }
 li.add-meal-from-week:hover, li.add-meal-from-week:active {
